# playing_with_mapillary

./: .travis.yml  README.md
image_sequence_downloader/: README.md  requirements.txt  setup.py
image_sequence_downloader/image_sequence/: main.py  utils.py
image_sequence_downloader/image_sequence/test/: test_utils.py
recurring_pattern_detector/: CMakeLists.txt
recurring_pattern_detector/recurring_pattern_detector/: CMakeLists.txt  recurring_pattern_detector.cpp  temporal_statistics.cpp  visualization.cpp  visualization.hpp
report/: report.tcp  report.tex
